2019-06-16  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/anytime-introduction.Rnw: Vignette wrapper with tip of
	the hat to Mark van der Loo for his January 2019 blog post
	* vignettes/rmd/anytime-intro.Rmd: Moved
	* vignettes/rmd/anytime.bib: Idem

	* vignettes/rmd/anytime-intro.Rmd: Updated
	* vignettes/anytime-intro.pdf: Idem

2019-06-15  Dirk Eddelbuettel  <edd@debian.org>

	* R/formats.R (iso8601): Switch format to ISO8601 use with T between
	date and time; allow option to override for old behaviour.
	* man/iso8601.Rd: Document new behaviour and option.

2019-06-10  Dirk Eddelbuettel  <edd@debian.org>

	* README.md (tinytest): Mention post-install testing

2019-06-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/anytime.cpp (r_stringToTime): Use Sys.setenv() from if on
	Windows as the latter OS remains "special"

	* inst/tinytest/test_all_formats.R: Exempt Windows from some tests
	* inst/tinytest/test_bulk.R: ditto
	* inst/tinytest/test_gh_issue_5.R: ditto
	* inst/tinytest/test_gh_issue_84.R: ditto
	* inst/tinytest/test_r_format.R: ditto
	* inst/tinytest/test_simple.R: ditto
	* inst/tinytest/test_utilities.R: ditto
	* inst/tinytest/test_validate.R: ditto

2019-06-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_r_format.R: Renamed for consistency
	* inst/tinytest/test_gh_issue_33.R: Idem
	* inst/tinytest/test_gh_issue_12.R: Idem
	* inst/tinytest/test_utilities.R: Idem

2019-06-07  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_assertions.R: From tests/assertions.R
	* inst/tinytest/test_bulk.R: tests/bulkTest.R
	* inst/tinytest/test_gh_issue_56.R: tests/gh_issue_56.R
	* inst/tinytest/test_gh_issue_84.R: tests/gh_issue_84.R
	* inst/tinytest/test_gh_issues_36_51.R: tests/gh_issues_36_51.R

2019-06-06  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_all_formats.R: From tests/testAllFormats.R
	* inst/tinytest/test_assertions.R: From tests/testAssertions.R