@@ -1,1 +1,12 @@
 comment: false
+
+coverage:
+  status:
+    patch:
+      default:
+        target: 0
+        threshold: 100
+    project:
+      default:
+        target: 50
+        threshold: 100
