@@ -8,6 +8,8 @@
 	* vignettes/rmd/anytime-intro.Rmd: Updated
 	* vignettes/anytime-intro.pdf: Idem
 
+	* .codecov.yml (coverage): Make patch behaviour more quiet
+
 2019-06-15  Dirk Eddelbuettel  <edd@debian.org>
 
 	* R/formats.R (iso8601): Switch format to ISO8601 use with T between
